force-app/main/default/objects/SFCC_Order_Staging__c/SFCC_Order_Staging__c.object-meta.xml
<CustomObject>
    <description>Staging record for every inbound SFCC Order Sync API call. Holds the raw payload plus sync status/error/retry tracking so Order creation can be retried without SFCC resending the request.</description>
    <label>SFCC Order Staging</label>
    <nameField>
        <displayFormat>OST-{0000000}</displayFormat>
        <label>SFCC Order Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFCC Order Stagings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>