force-app/main/default/objects/SFCC_Order_Staging__c/fields/Last_Successful_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Sync__c</fullName>
    <description>Timestamp of the most recent successful sync. Only ever set when Sync_Status__c transitions to Synced.</description>
    <label>Last Successful Sync</label>
    <type>DateTime</type>
</CustomField>