force-app/main/default/objects/SFCC_Order_Staging__c/fields/Last_Sync_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Attempt__c</fullName>
    <description>Timestamp of the most recent sync attempt (success or failure), set by CARAOrderSyncService.syncFromStaging before it processes the payload.</description>
    <label>Last Sync Attempt</label>
    <type>DateTime</type>
</CustomField>