force-app/main/default/objects/SFCC_Order_Staging__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of sync attempts made after the original attempt (incremented by CARAOrderSyncService.syncFromStaging whenever Last_Sync_Attempt__c was already set before the attempt). The original/first attempt is not counted as a retry. No hard cap is enforced.</description>
    <label>Retry Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>