force-app/main/default/objects/SFCC_Order_Staging__c/fields/Salesforce_Order__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The real Order record created/linked once this staging record syncs successfully. Set exactly once, when Sync_Status__c first becomes Synced.</description>
    <label>Salesforce Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>SFCC Order Stagings</relationshipLabel>
    <relationshipName>SFCC_Order_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>