force-app/main/default/objects/SFCC_Order_Staging__c/fields/SFCC_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Order_Number__c</fullName>
    <description>SFCC orderNo. Business/external key for this Order Sync attempt. Blank only when the inbound payload could not be parsed at all. CARAOrderSyncService upserts on this field so a repeat API call for the same SFCC order reuses the same staging row instead of creating a duplicate.</description>
    <externalId>true</externalId>
    <label>SFCC Order Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>