force-app/main/default/objects/SFCC_Order_Staging__c/fields/Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Sync_Error__c</fullName>
    <description>Sanitized error message from the most recent failed sync/retry attempt. Only ever populated with the Apex exception message raised by validation or DML inside CARAOrderSyncService; never populated with tokens, secrets, or raw stack traces. Cleared on a successful sync.</description>
    <label>Sync Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>