force-app/main/default/objects/SFCC_Order_Staging__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <description>Received: payload just captured, not yet attempted. Ready for Sync: captured and eligible to be (re)processed by Retry Sync, same as Failed. Syncing: a sync attempt is in flight (row-locked); Retry Sync is blocked while in this state. Synced: the Salesforce Order was created/linked; Retry Sync is a no-op. Failed: the last attempt failed; Sync_Error__c has the reason and Retry Sync is allowed.</description>
    <label>Sync Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
                <default>true</default>
                <label>Received</label>
            </value>
            <value>
                <fullName>Ready for Sync</fullName>
            </value>
            <value>
                <fullName>Syncing</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>