force-app/main/default/objects/SFCC_Order_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SFCC_Order_Number__c</columns>
    <columns>Sync_Status__c</columns>
    <columns>Salesforce_Order__c</columns>
    <columns>Retry_Count__c</columns>
    <columns>Last_Sync_Attempt__c</columns>
    <columns>Last_Successful_Sync__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>